--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8090
+server.port=8888
 #编码格式
 spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
@@ -17,13 +17,16 @@ spring.datasource.password=root
 ##spring.thymeleaf.prefix=templates/
 ##thymeleaf模板缓存 禁用
 #spring.thymeleaf.cache=false
+
+logging.path=/Users/jackie/workspace/rome/ 
+logging.file=springbootdemo.log
 logging.path=/var/logs
 logging.file=log
 logging.level.root=DEBUG
 logging.level.root.org.springframework.security=DEBUG
 spring.profiles.active=production
 #静态资源配置
-spring.resources.static-locations=file:D://img/
+spring.resources.static-locations=file:/img/
 spring.mvc.static-path-pattern=/uploadFile/uploadImg/**
 #server.servlet.session.timeout=3000
 
